--- a/index.html
+++ b/index.html
@@ -18,16 +18,10 @@
             </div>
         </div>
 
-        <div class="container picture-1">
+        <div class="container picturetest-1">
             <h2 class="picture-heading fade-in" id="picture-heading">YERCAUD</h2>
         </div>
 
-        <div class="container">
-            <div class="bg-wrap">
-                <div class="bg picture-1"></div>
-                <h2 class="picture-heading fade-in" id="picture-heading">YERCAUD</h2>
-            </div>
-        </div>
 
        
 
@@ -44,7 +38,7 @@
             </div>
         </div>
 
-        <div class="container picture-2">
+        <div class="container picturetest-2">
             <h2 class="picture-heading fade-in" id="picture-heading">GANDIKOTA</h2>
         </div>
 
