--- a/index.html
+++ b/index.html
@@ -22,9 +22,6 @@
             <h2 class="picture-heading fade-in" id="picture-heading">YERCAUD</h2>
         </div>
 
-
-       
-
         <div class="container container-1">
             <div class="container-text">
                 <h4 class="short-description fade-in">Yercaud is a hill station town in the south Indian state of Tamil Nadu. It lies in the Shevaroy Hills, known for their orange groves, and coffee, fruit and spice plantations. Yercaud Lake has a boathouse, and is surrounded by gardens and woods. On the lake’s eastern shore, Anna Park has local plants and a Japanese garden with bonsai. To the southwest, Lady’s Seat vantage point has a watchtower with a telescope. A perfect weekend gataway to spend time with your loved ones!!!​</h4>
@@ -45,7 +42,7 @@
         <div class="container">
             <div class="bg-wrap">
                 <div class="bg picture-2" style="background-image: url('../images/Compressed/Gandikota.jpg');"></div>
-                <h2 class="picture-heading fade-in" id="picture-heading">GANDIKOTA</h2>
+                <!-- <h2 class="picture-heading fade-in" id="picture-heading">GANDIKOTA</h2> -->
             </div>
         </div>
 
@@ -63,7 +60,7 @@
         <div class="container">
             <div class="bg-wrap">
                 <div class="bg picture-3" style="background-image: url('../images/Compressed/Kovalam.jpg');"></div>
-                <h2 class="picture-heading fade-in" id="picture-heading">KOVALAM</h2>
+                <!-- <h2 class="picture-heading fade-in" id="picture-heading">KOVALAM</h2> -->
             </div>
         </div>
         <div class="container container-3">
