--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     
-    <div class="site-wrapper">
+    <!-- <div class="site-wrapper">
         <div class="container intro" id="top">
             <div class="intro-text">
                 <h1 class="main-heading" id="main-heading">MEMORIES OF TRAVEL</h1>
@@ -42,7 +42,7 @@
         <div class="container">
             <div class="bg-wrap">
                 <div class="bg picture-2" style="background-image: url('../images/Compressed/Gandikota.jpg');"></div>
-                <!-- <h2 class="picture-heading fade-in" id="picture-heading">GANDIKOTA</h2> -->
+                <h2 class="picture-heading fade-in" id="picture-heading">GANDIKOTA</h2>
             </div>
         </div>
 
@@ -60,7 +60,7 @@
         <div class="container">
             <div class="bg-wrap">
                 <div class="bg picture-3" style="background-image: url('../images/Compressed/Kovalam.jpg');"></div>
-                <!-- <h2 class="picture-heading fade-in" id="picture-heading">KOVALAM</h2> -->
+                <h2 class="picture-heading fade-in" id="picture-heading">KOVALAM</h2>
             </div>
         </div>
         <div class="container container-3">
@@ -141,7 +141,7 @@
             <div class="bottom-float-text rellax" id="bottom-float-text-7" data-rellax-speed="5">
                 <h5 class="float-text light">Best time to visit: November – February</h5>
             </div>
-        </div>
+        </div> -->
         <!-- <div class="container">
             <div class="bg-wrap">
                 <div class="bg picture-8" style="background-image: url('../images/Compressed/Belur.jpg'); background-position: bottom center;"></div>
@@ -448,7 +448,31 @@
                 <h5 class="float-text light">Best time to visit: August – December​</h5>
             </div>
         </div> -->
-        <div class="container outro">
+        <div class="overlay">
+            <h1>Customise your own svg placeholder images from <a target="_blank" href="https://placehold.co/">Placehold.co</a></h1>
+        </div>
+        <section>
+            <div class="bg-wrap">
+                <div class="bg" style="background-image: url('../images/Compressed/Yercard.jpg');"></div>
+            </div>
+        </section>
+        <section>
+            <div class="bg-wrap">
+                <div class="bg" style="background-image: url('../images/Compressed/Agumbe.jpg');"></div>
+            </div>
+        </section>
+        <section>
+            <div class="bg-wrap">
+                <div class="bg" style="background-image: url('../images/Compressed/GANDIKOTA.jpg');"></div>
+            </div>
+        </section>
+        <section>
+            <div class="bg-wrap">
+                <div class="bg" style="background-image: url('../images/Compressed/Badami.jpg');"></div>
+            </div>
+        </section>
+
+        <!-- <div class="container outro">
             <div class="outro-text">
                 <h1 class="main-heading px-2 sliders from-left" id="main-heading">MORE TO COME!!</h1>
                 <h2 class="main-sub-heading sliders from-right" id="main-sub-heading">Keep Watching...</h2>
@@ -465,7 +489,7 @@
                 <a class="social-media-links"  href="https://github.com/dev92r/" aria-label="GitHub" target="_blank" rel="noreferrer"><svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github"><title>GitHub</title><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg></a>
             </div>
         </div> 
-    </div>
+    </div> -->
    
 <script src="js/script.js"></script>
 <script src="js/jquery-3.4.1.min.js"></script>
