--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html lang="en">
 <head>
     <title>Memories of Travel</title>
@@ -458,17 +458,27 @@
         </section>
         <section>
             <div class="bg-wrap">
-                <div class="bg" style="background-image: url('../images/Compressed/Agumbe.jpg');"></div>
+                <div class="bg" style="background-image: url('../images/Compressed/Agumbe.jpg'); width: 100%; height: 100%;"></div>
             </div>
         </section>
         <section>
             <div class="bg-wrap">
-                <div class="bg" style="background-image: url('../images/Compressed/GANDIKOTA.jpg');"></div>
+                <div class="bg" style="background-image: url('../images/Compressed/GANDIKOTA.jpg'); width: 100%; height: 100%;"></div>
             </div>
         </section>
         <section>
             <div class="bg-wrap">
-                <div class="bg" style="background-image: url('../images/Compressed/Badami.jpg');"></div>
+                <div class="bg" style="background-image: url('../images/Compressed/Badami.jpg'); width: 100%; height: 100%;"></div>
+            </div>
+        </section>
+        <section>
+            <div class="bg-wrap">
+                <div class="bg" style="background-image: url('../images/Compressed/Coorg.jpg');"></div>
+            </div>
+        </section>
+        <section>
+            <div class="bg-wrap">
+                <div class="bg" style="background-image: url('../images/Compressed/Aihole.jpg');"></div>
             </div>
         </section>
 
