--- a/index.html
+++ b/index.html
@@ -448,9 +448,7 @@
                 <h5 class="float-text light">Best time to visit: August – December​</h5>
             </div>
         </div> -->
-        <div class="overlay">
-            <h1>Customise your own svg placeholder images from <a target="_blank" href="https://placehold.co/">Placehold.co</a></h1>
-        </div>
+
         <section>
             <div class="bg-wrap">
                 <div class="bg" style="background-image: url('../images/Compressed/Yercard.jpg');"></div>
@@ -458,17 +456,17 @@
         </section>
         <section>
             <div class="bg-wrap">
-                <div class="bg" style="background-image: url('../images/Compressed/Agumbe.jpg'); width: 100%; height: 100%;"></div>
+                <div class="bg" style="background-image: url('../images/Compressed/Agumbe.jpg')"></div>
             </div>
         </section>
         <section>
             <div class="bg-wrap">
-                <div class="bg" style="background-image: url('../images/Compressed/GANDIKOTA.jpg'); width: 100%; height: 100%;"></div>
+                <div class="bg" style="background-image: url('../images/Compressed/GANDIKOTA.jpg')"></div>
             </div>
         </section>
         <section>
             <div class="bg-wrap">
-                <div class="bg" style="background-image: url('../images/Compressed/Badami.jpg'); width: 100%; height: 100%;"></div>
+                <div class="bg" style="background-image: url('../images/Compressed/Badami.jpg')"></div>
             </div>
         </section>
         <section>
