--- a/index.html
+++ b/index.html
@@ -6,7 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    
+    <style>
+        .bg-wrap {
+    clip: rect(0, auto, auto, 0);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.bg {
+    position: fixed;
+    display: block;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center center;
+}
+    </style>
 </head>
 <body>
     
@@ -499,9 +519,14 @@
         </div> 
     </div> -->
    
-<script src="js/script.js"></script>
-<script src="js/jquery-3.4.1.min.js"></script>
+
+<script
+  src="https://code.jquery.com/jquery-3.6.0.min.js"
+  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+  crossorigin="anonymous"></script>
+  <script src="js/script.js"></script>
 <!-- <script src="js/rellax.min.js"></script>
+
 
 <script>  
 // Also can pass in optional settings block
