--- a/index.html
+++ b/index.html
@@ -6,27 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <style>
-        .bg-wrap {
-    clip: rect(0, auto, auto, 0);
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-
-.bg {
-    position: fixed;
-    display: block;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    background-position: center center;
-}
-    </style>
 </head>
 <body>
     
@@ -475,10 +454,16 @@
             </div>
         </section>
         <section>
+            <div class="picture-1" style="background-image: url('../images/Compressed/Coorg.jpg');"></div>
+          </section>
+        <section>
             <div class="bg-wrap">
                 <div class="bg" style="background-image: url('../images/Compressed/Agumbe.jpg')"></div>
             </div>
         </section>
+        <section>
+            <div class="picture-1" style="background-image: url('../images/Compressed/Badami.jpg');"></div>
+    </section>
         <section>
             <div class="bg-wrap">
                 <div class="bg" style="background-image: url('../images/Compressed/GANDIKOTA.jpg')"></div>
@@ -498,6 +483,9 @@
             <div class="bg-wrap">
                 <div class="bg" style="background-image: url('../images/Compressed/Aihole.jpg');"></div>
             </div>
+        </section>
+        <section>
+                <div class="picture-1" style="background-image: url('../images/Compressed/Coorg.jpg');"></div>
         </section>
 
         <!-- <div class="container outro">
