--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <h2 class="main-sub-heading" id="main-sub-heading">Wander Often, Wonder Always.</h2>
             </div>
         </div>
-        <div class="container picture-1">
+        <div class="container bg picture-1" style="background-image: url('../images/Compressed/Yercaud.jpg');">
             <h2 class="picture-heading fade-in" id="picture-heading">YERCAUD</h2>
         </div>
         <div class="container container-1">
@@ -24,28 +24,16 @@
                 <h4 class="short-description fade-in">Yercaud is a hill station town in the south Indian state of Tamil Nadu. It lies in the Shevaroy Hills, known for their orange groves, and coffee, fruit and spice plantations. Yercaud Lake has a boathouse, and is surrounded by gardens and woods. On the lake’s eastern shore, Anna Park has local plants and a Japanese garden with bonsai. To the southwest, Lady’s Seat vantage point has a watchtower with a telescope. A perfect weekend gataway to spend time with your loved ones!!!​</h4>
             </div>
         </div>
-
-        <div class="container picturetest-2">
+        <div class="container bg picture-1" style="background-image: url('../images/Compressed/Gandikota.jpg');">
             <h2 class="picture-heading fade-in" id="picture-heading">GANDIKOTA</h2>
         </div>
-
-        <div class="container">
-            <div class="bg-wrap">
-                <div class="bg picture-2" style="background-image: url('../images/Compressed/Gandikota.jpg');"></div>
-                <h2 class="picture-heading fade-in" id="picture-heading">GANDIKOTA</h2>
-            </div>
-        </div>
-
         <div class="container container-2">
             <div class="container-text">
                 <h4 class="short-description fade-in">Gandikota is a small village in the Kadapa district of Andhra Pradesh that is known for its spectacular gorge formed by the river Pennar that cuts through the Erramala hills. This handsome piece of nature’s architecture has come to be known as the Hidden Grand Canyon of India by travelers who visit it and get bewitched by its beauty. Apart from the unmatched beauty of the gorge, the mystical charm of the Gandikota fort makes a visit to this village all the more exciting for history lovers and adventure seekers.</h4>
             </div>
         </div>
-        <div class="container">
-            <div class="bg-wrap">
-                <div class="bg picture-3" style="background-image: url('../images/Compressed/Kovalam.jpg');"></div>
-                <h2 class="picture-heading fade-in" id="picture-heading">KOVALAM</h2>
-            </div>
+        <div class="container bg picture-1" style="background-image: url('../images/Compressed/Kovalam.jpg');">
+            <h2 class="picture-heading fade-in" id="picture-heading">KOVALAM</h2>
         </div>
         <div class="container container-3">
             <div class="container-text">
