New place is added

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
                 <a class="menu-item-link light" href="#GOKARNA">GOKARNA</a>
                 <a class="menu-item-link light" href="#COORG">COORG</a>
                 <a class="menu-item-link light" href="#JOGFALLS">JOG FALLS</a>
+                <a class="menu-item-link light" href="#KUDHREMUKHA">KUDHREMUKHA</a>
+                <a class="menu-item-link light" href="#MAKALIDURGA">MAKALIDURGA</a>
             </div> 
           </div>
     <div class="site-wrapper">
@@ -245,12 +247,20 @@
                 <h4 class="short-description fade-in">Jog Falls, a major attraction in Karnataka, is located in the Shimoga district of Karnataka. Also known by alternative names of Gerusoppe Falls, Gersoppa Falls, and Jogada Gundi, it is one of the highest waterfalls in India. During monsoons, one can see a breathtaking view of the falls with rainbows coming every now and then. It is one of nature’s splendid masterpieces and is situated in the dense evergreen forests. The effect of these striking falls is enhanced by the wild and beautiful region around it which is covered with plenty of abundant vegetation. This waterfall drops directly down without streaming on the rocks.</h4>
             </div>
         </div>
-        <div class="container bg picture-26" id="JOGFALLS" style="background-image: url('../images/Compressed/Kudremukha.jpeg');">
+        <div class="container bg picture-26" id="KUDHREMUKHA" style="background-image: url('../images/Compressed/Kudremukha.jpeg');">
             <h2 class="picture-heading fade-in" id="picture-heading">KUDHREMUKHA</h2>
         </div>
         <div class="container container-26">
             <div class="container-text">
-                <h4 class="short-description fade-in">Kudremukh peak is a part of the Kudremukh forest range and is the third highest peak in Karnataka after the Mullayangiri and Baba Budangiri. It is situated in Chikmagalur district of Karnataka, one of the coffee hubs of Karnataka. In the Kannada dialect “Kudre” means horse and “mukha” means face. And it happens so that the Kudremukh or Kudremukha peak appears like the face of a horse. Rolling green hills with the descending fog and mist, the place is simply beatific for the trekking enthusiast. Trek difficulty level is moderate and 9 Kms (One side). You will require 4 to 5 hours to trek uphill and about 3 hours downhill.</h4>
+                <h4 class="short-description fade-in">Kudremukh peak is a part of the Kudremukh forest range and is the third highest peak in Karnataka after the Mullayangiri and Baba Budangiri. It is situated in Chikmagalur district of Karnataka, one of the coffee hubs of Karnataka. In the Kannada dialect “Kudre” means horse and “mukha” means face. And it happens so that the Kudremukh or Kudremukha peak appears like the face of a horse. Rolling green hills with the descending fog and mist, the place is simply beatific for the trekking enthusiast. Trek difficulty level is moderate and distance is 9 Kms (One side). You will require 4 to 5 hours to trek uphill and about 3 hours downhill.</h4>
+            </div>
+        </div>
+        <div class="container bg picture-27" id="MAKALIDURGA" style="background-image: url('../images/Compressed/Makalidurga.jpg');">
+            <h2 class="picture-heading fade-in" id="picture-heading">MAKALIDURGA</h2>
+        </div>
+        <div class="container container-27">
+            <div class="container-text">
+                <h4 class="short-description fade-in"> Makalidurga is situated at about 15 km from Doddaballapur. As you reach Makalidurga, you are stunned by the stillness of the place. There are hardly any people around and a partly exciting experience to get away from the traffic and noise. It is best advised to carry your own food and water while coming for a day trek in Makalidurga. The highlight of the destination is the Makalidurga fort which lies atop a granite hillock. The view you get here of the lake which is located just a few km away from the destination is fascinating. And while at the top, don’t miss out on catching a sight of the train meandering through the hills at the bottom of the hill. The sight and sounds are definitely worthy of being caught in your camera.</h4>
             </div>
         </div>
         <!-- Outro -->
